# arena-isaac

./: .gitignore  README.md  colcon_build  create_env  frames_2025-01-02_16.19.47.gv  frames_2025-01-02_16.33.59.gv  init.bash  requirements.txt  setup.bash  test_import  test_import.txt
.old/: small_warehouse.usd
.old/robot_models/: map_add_colli_scaled.usd  sensors.py  shelf.usd  table.usd
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
isaacsim_msgs/: package.xml
isaacsim_msgs/msg/: Door.msg  Floor.msg  Material.msg  NavPed.msg  Pedestrian.msg  PedestrianGoal.msg  Person.msg  Prim.msg  Scale.msg  Wall.msg
isaacsim_msgs/srv/: DeletePrims.srv  EditPrims.srv  GetPrims.srv  ImportObstacles.srv  ImportUrdf.srv  ImportYaml.srv  MovePed.srv  MovePrim.srv  NavigatePedestrians.srv  Pedestrian.srv  RegisterEntity.srv  ScalePrim.srv  SpawnDoor.srv  SpawnDoors.srv  SpawnElevator.srv  SpawnFloor.srv  SpawnFloors.srv  SpawnPedestrians.srv  SpawnPrims.srv  SpawnUrdf.srv  SpawnWall.srv  (+2 more)
log/: latest_build
robot_models/: chair.urdf  demo.yaml  jackal.usd  jackal_urdf.usd  shelf.usd  waffle.usd  waffle_import_config.yaml  world_1.yaml
ros2isaacsim/: package.xml
src/isaacsim_msgs/: CMakeLists.txt
src/isaacsim_msgs/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  package-checkpoint.xml
src/isaacsim_msgs/msg/: ContactSensor.msg  Pedestrian.msg
src/isaacsim_msgs/srv/: DeletePrim.srv  GetPrimAttributes.srv  ImportObstacles.srv  ImportUrdf.srv  ImportUsd.srv  MovePrim.srv  ScalePrim.srv  SdfToUsd.srv  SpawnWall.srv  UrdfToUsd.srv
(+320 files in other folders)
